--- a/portal/app/views/homepage/index.html.erb
+++ b/portal/app/views/homepage/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome!</h1>
 <p>To make sure we can find the best fit for you, we need our database to be as complete and up-to-date as possible.
-  Go ahead and take five minutes to complete the info below.</p>
+<br> Go ahead and take five minutes to complete the info below.</p>
